--- a/templates/partials/authentication/base.html
+++ b/templates/partials/authentication/base.html
@@ -28,7 +28,7 @@
                 <div class="form">
 
                     <div class="center" id="site-title">
-                        <p>EU Banking</p>
+                        <h2>EU Banking</h2>
                     </div>
                     <div class="logo center grid">
                         <img src="{% static "/images/authentication/authentication.jpg" %}" alt="" srcset="" class="authentication-logo">
@@ -48,6 +48,9 @@
     </main>
 
 </body>
+
+
+
 
 
 {% block sript %}{% endblock sript %}
