--- a/static/css/css.css
+++ b/static/css/css.css
@@ -7,7 +7,18 @@
     margin: 0;
 
 }
+:root {
+  --font-size-xs: 0.75rem;  
+  --font-size-sm: 0.875rem; 
+  --font-size-md: 1rem;     
+  --font-size-lg: 1.25rem;  
+  --font-size-xl: 1.5rem;   
+  --font-size-xxl: 2rem;    
+  --font-size-xxxl: 3rem;
 
+  --primary-blue-color: #1e1eab;
+  --white-color: #fffff
+}
 
 
 h1, h2, h3, h4, h5, h6 {
@@ -45,21 +56,6 @@ body {
     align-items: center;
 }
 
-:root {
-    
-    --font-size-md: 2rem;
-    --font-size-lg: 3rem;
-    --font-size-sm: 0.85rem;
-    --font-size-xs: 0.45rem;
-
-
-    --primary-blue-color: #1e1eab;
-    --white-color: #fffff
-    
-}
-
-
-
 
 .authentication__picture {
     position: relative;
@@ -84,7 +80,7 @@ input {
     height: 34px;
     border: 2px solid lavender;
     margin-bottom: 10px;
-    font-size: 1rem;
+    font-size: var(--font-size-md);
     font-weight: 300;
     padding: 4px;
 }
@@ -149,12 +145,11 @@ label {
     height: 100px;
     border: 2px solid lavender;
     margin-bottom: 10px;
-    font-size: 1.2rem;
     font-weight: 300;
     padding: 4px;
     width: 150px;
     text-align: center;
-    font-size: 3rem;
+    font-size: var(--font-size-xxxl);
     text-transform: uppercase;
     
 }
@@ -162,4 +157,15 @@ label {
 .verify-btn {
     width: 20%;
     margin: auto;
+}
+
+
+ #messages-container .success {
+    text-align: center;
+    background: green;
+    color: white;
+    padding: 3px;
+    font-size: var(--font-size-md);
+    margin: 7px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
