--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -9,7 +9,7 @@
     
     {% include "partials/messages/messages.html" %}
     
-    <div class="authentication_type center grid">
+    <div class="authentication_type center flex-column">
         <p class="info">Register to use the site</p>
         <small>Already have an account. Click <a href="{% url 'login' %}">here?</a></small>
     </div>
