--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
     <main>
         <section id="virtualbank-dashboard">
-
+            {% include "partials/messages/messages.html" %}
             <div id="spinner2" class="spinner2"></div>
             <div class="container">
                 {% block body %}{% endblock body %}
