--- a/templates/partials/main/add_account_info.html
+++ b/templates/partials/main/add_account_info.html
@@ -27,12 +27,12 @@
 
                 <div class="account-information">
                     <p class="bold">Pin:</p>
-                    <p>1025</p>
+                    <p>{{ PIN }}</p>
                 </div>
 
                 <div class="account-information">
                     <p class="bold">Joined:</p>
-                    <p>01/04/2024</p>
+                    <p>{{ JOINED_DATE }}</p>
                 </div>
             </div>
 
