--- a/templates/authentication/add_pin.html
+++ b/templates/authentication/add_pin.html
@@ -23,22 +23,19 @@
                
                 <div class="form">
 
-                    <div class="center" id="site-title">
-                        <h2>VFlix - Verify Fast. Login Instantly to eXplore</h2>
-                    </div>
                     <div class="logo center grid">
-                        <img src="{% static "/images/authentication/authentication.jpg" %}" alt="" srcset="" id="verification-logo">
+                        <img src="{% static "/images/authentication/authentication.jpg" %}" alt="" srcset="" class="authentication-logo" id="pin-image">
 
                     </div>
                     <div class="authentication_type center grid">
-                        <h3 class="info">Verify your account</h3>
+                        <h3 class="info">Add your pin</h3>
                     </div>
                   
 
-                    <form action="{% url 'verify_registration_code' username %}" method="post" class="grid authentication-form-div center">
+                    <form action="" method="post" class="grid authentication-form-div center" id="addNewPinForm">
                       
                          {% csrf_token %}                       
-                        <div class="flex-verification-grid" id="verification-grid-input">
+                        <div class="four-column-grid center" id="pin-input">
 
                             {% for field in form %} 
                                 {{ field.as_widget }}
@@ -46,7 +43,7 @@
                      
                         </div>
 
-                        <button class="btn-medium text-upper verify-btn" type="submit">Verify code</button>                        
+                        <button class="btn-medium text-upper add-pin-btn" type="submit">Add pin</button>                        
 
                     </form>
 
