--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -9,8 +9,9 @@
     
 {% include "partials/messages/messages.html" %}
     
-    <div class="authentication_type center grid">
+    <div class="authentication_type center flex-column">
         <p class="info">Login to use the site</p>
+        
         <small>Don't have an account. Click <a href="{% url 'register' %}">here?</a></small>
     </div>
 
