--- a/templates/partials/main/add_account_info_form.html
+++ b/templates/partials/main/add_account_info_form.html
@@ -1,5 +1,5 @@
 
-<form action="{% url 'save_profile_details' %}" method="post" id="profile-form">
+<form action="#" method="post" id="profile-form">
 
     {% csrf_token %}
 
