--- a/templates/partials/messages/messages.html
+++ b/templates/partials/messages/messages.html
@@ -1,7 +1,14 @@
 {% if messages %}
-<ul class="messages" id="messages-container">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
+    <ul class="messages" id="messages-container">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% if "logout" in message.tags %}
+                <script type="module">
+                   
+                    import { handleLogoutCleanup } from "/static/js/logoutHandler.js";
+                    handleLogoutCleanup();
+                </script>
+            {% endif %}
+        {% endfor %}
+    </ul>
 {% endif %}
